<resources>
    <string name="app_name">Sunshine4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_key" trnslatable="false ">Location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" trnslatable="false">94043</string>
    <string name="pref_temp_unit_key" translatable="false">Temperatureinunits</string>
    <string name="pref_temp_unit_label">Temperature in Units</string>
    <string name="pref_temp_unit_default" translatable="false">metric</string>
    <string name="pref_unit_metric">metric</string>
    <string name="pref_unit_imperial">imperial</string>
    <string name="pref_unit_label_metric">Metric</string>
    <string name="pref_unit_label_imperial">Imperial</string>


</resources>
