 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true" />

     <ListPreference android:key="@string/pref_temp_unit_key"
         android:title="@string/pref_temp_unit_label"
         android:defaultValue="@string/pref_temp_unit_default"
         android:entryValues="@array/pref_unit_values"
         android:entries="@array/pref_unit_options"
        />

</PreferenceScreen>
